--- a/.github/workflows/sobelow.yml
+++ b/.github/workflows/sobelow.yml
@@ -35,7 +35,5 @@ jobs:
       - uses: actions/checkout@v3
       - id: run-action
         uses: sobelow/action@1afd6d2cae70ae8bd900b58506f54487ed863912
-      - name: Upload report
-        uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: results.sarif
+          report: false
